# monorail

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
mm/: __init__.py  cli.py  config.py  daemon.py  extractor.py  inbox.py  notes.py  tui.py  watcher.py
monorail/: __init__.py  cli.py  config.py  daemon.py  extractor.py  inbox.py  notes.py  tui.py  utils.py  watcher.py
prompts/: extract.txt  inbox.txt  summarize.txt
